# login-template

./: .gitignore  README.md  docker-compose.yml
.agents/: AGENTS.md
login-next/: .dockerignore  Dockerfile  package-lock.json  package.json
login-next/src/app/auth/forgot-password/: page.tsx
login-next/src/app/auth/login/: page.tsx
login-next/src/app/auth/register/: page.tsx
login-next/src/app/auth/reset-password/: ResetPasswordClient.tsx
login-next/src/app/components/: Loader.tsx  ProtectedRoutes.tsx  SessionWatcher.tsx  navbar.tsx
login-next/src/app/lib/: api.tsx  utils.ts
login-next/src/app/profile/: page.tsx
login-next/src/app/store/: Store.tsx
login-python/: .dockerignore  Dockerfile  alembic.ini  fix_user_time.py  main.py  pyproject.toml  requirements.txt  start.sh  test_db_time.py  test_now.py  test_pg_tz.py
login-python/alembic/: env.py
login-python/alembic/versions/: 8c5c6ad95756_migracion_inicial_roles_y_usuarios.py  94d8793c2fd5_add_timezone_to_datetime.py
login-python/app/: config.py  crud.py  db.py  main.py  models.py  pre_start.py  schemas.py  seed_roles.py
login-python/app/routes/: auth.py
login-python/app/services/: auth.py  email.py
