[project]
name = "login-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.11",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "resend>=2.33.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "starlette==0.46.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
]
